# near-protocol-rewards

./: .env.example  .env.test  .env.test.example  .eslintrc.cjs  .eslintrc.js  .gitignore  .npmignore  .npmrc  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Project.md  README.md  docker-compose.test.yml  docker-compose.yml  implementation.md  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  test.js  tsconfig.json
.cursor/rules/: project.mdc
.github/workflows/: ci.yml  ecr-deploy.yml  near-rewards.yml  publish.yml
docs/: api-examples.md  api-reference.md  api.md  architecture.md  beta-checklist.md  beta-testing.md  dashboard-rules.md  dashboard.md  deployment.md  environment-variables.md  examples.md  github-actions-setup.md  integration-guide.md  postgres-setup.md  prd.md  quick-start.md  rewards.md  roadmap.md  troubleshooting.md  ui-roadmap.md
examples/: basic-usage.ts  minimal-setup.ts  test-sdk.ts
examples/basic-usage/: index.ts  tsconfig.json
old-near-protocol-rewards/: .env.test.example  .eslintrc.cjs  .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  README.md  jest.config.cjs  near-protocol-rewards-0.2.5.tgz  package-lock.json  package.json  tailwind.config.js  tsconfig.test.json
old-near-protocol-rewards/docs/: architecture.md  dashboard.md  quick-start.md  troubleshooting.md
old-near-protocol-rewards/scripts/: init-test-db.ts  run-tests.ts  setup-test-db.ts  verify-github-token.ts  verify-near-api.ts
old-near-protocol-rewards/src/: index.ts  sdk.ts
old-near-protocol-rewards/workflows/: ci.yml
scripts/: init-test-db.ts  setup-test-db.ts  test-mvp.ts
scripts/lambda/: data.json  main.py  modification.md  onchain.py  onchain_offchain_data.py  rewards.py
src/: cli.ts  data.json  index.ts  main.py  sdk.ts  verity
src/agents/: base.py  commit_agent.py  docs_agent.py  review_agent.py  tutorial_agent.py
src/aggregator/: data-aggregator.ts  metrics-aggregator.ts
src/analytics/: historical-analyzer.ts
src/api/: index.ts  router.ts  routes.ts  server.ts  types.ts
tests/: conftest.py  github-token-verify.ts  setup.ts
(+201 files in other folders)
